Sugati/src/objects/Country__c.object
<CustomObject>
    <description>Store a list of Countries</description>
    <fields>
        <fullName>C_Archive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Archive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C_Client_Notes__c</fullName>
        <label>Client Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>C_Continent__c</fullName>
        <inlineHelpText>Which region is the country in?</inlineHelpText>
        <label>Continent</label>
        <referenceTo>Continent__c</referenceTo>
        <relationshipLabel>Countries</relationshipLabel>
        <relationshipName>Countries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>C_Country_Code__c</fullName>
        <label>Country Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C_EU__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C_Holiday_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Holiday Type</label>
        <referenceTo>Holiday_Type__c</referenceTo>
        <relationshipLabel>Countries</relationshipLabel>
        <relationshipName>Countries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>C_Holiday_Types__c</fullName>
        <label>Holiday Types</label>
        <picklist>
            <picklistValues>
                <fullName>History</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Generic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Couples</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Luxury Holidays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Big Short Breaks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Babymoon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adventures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honeymoon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stag/Hen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Holiday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anniversary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expert-Led Journeys</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birthday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dive In Style</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTUK</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>C_Interest__c</fullName>
        <label>Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Diving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fine Dining</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>C_Margin__c</fullName>
        <label>Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>C_Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>C_Our_Opinion__c</fullName>
        <label>Our Opinion</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>C_Quote__c</fullName>
        <label>Quote</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>C_Sales_Tips__c</fullName>
        <label>Sales Tips</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>C_When__c</fullName>
        <label>When</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Country</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>C_Archive__c</columns>
        <columns>C_Continent__c</columns>
        <columns>C_Country_Code__c</columns>
        <columns>C_EU__c</columns>
        <columns>C_Holiday_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Country Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Countries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>